# ConcursoAoC2022

./: .gitignore  CMakeLists.txt
Dia01/: CMakeLists.txt  Dia1-1.cpp  Dia1-2.cpp  Dia1.cpp  Dia1B.cpp
Dia02/: CMakeLists.txt  Dia2.cpp  Dia2A.cpp  tablas.excalidraw
Dia03/: CMakeLists.txt  Dia03.cpp
Dia04/: CMakeLists.txt  Dia4.cpp
Dia05/: CMakeLists.txt  Dia5.cpp
Dia06/: CMakeLists.txt  Dia6.cpp
Dia07/: CMakeLists.txt  Dia7.cpp
Dia08/: CMakeLists.txt  Dia8.cpp
Dia09/: CMakeLists.txt  Dia9.cpp  notes.tldr
Dia10/: CMakeLists.txt  Dia10.cpp
Dia11/: CMakeLists.txt  Dia11.cpp
Dia12/: CMakeLists.txt  Dia12.cpp
Dia13/: CMakeLists.txt
Dia14/: DiaX.cpp
Plantilla/: DiaX.cpp
Pruebas/: CMakeLists.txt  aoc_12_2.cpp
inputs/: inputDia3.txt
utils/: CMakeLists.txt  aocutils.cpp  aocutils.h  bulk_create_input_files.py
